@startuml

title __GOCOMPILER's Class Diagram__\n

  namespace com.example.gocompiler {
    class com.example.gocompiler.Activity1 {
        ~ dirPath : String
        ~ executePostReq : AsyncTask<Integer, Void, Void>
        ~ filePaths : String[]
        ~ prevIntent : Intent
        + onClick()
        # onActivityResult()
        # onCreate()
        - addItemsToDisplay()
        - decodeRes()
        - displayErrorButtons()
        - encodeB64File()
        - parseErrors()
        - sendPostRequest()
        - startPostReqProcess()
    }
  }
  

  namespace com.example.gocompiler {
    class com.example.gocompiler.ErrorsData {
        + Errors : String
        + Ok : boolean
        + getCompiled()
        + getErrorsList()
        ~ ErrorsData()
    }
  }
  

  namespace com.example.gocompiler {
    class com.example.gocompiler.FixErrorsActivity {
        ~ cursorLine : int
        ~ et : EditText
        ~ filePath : String
        ~ intent : Intent
        # onCreate()
        - tryAgain()
        - updateFile()
    }
  }
  

  namespace com.example.gocompiler {
    class com.example.gocompiler.MainActivity {
        ~ ACT_2_REQUEST : int
        ~ act2b : Button
        ~ dirTV : TextView
        ~ filePaths : String[]
        + onActivityResult()
        # onCreate()
        - openActivity2()
        - startFilePicker()
    }
  }
  

  com.example.gocompiler.Activity1 .up.|> android.view.View.OnClickListener
  com.example.gocompiler.Activity1 -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.gocompiler.FixErrorsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.gocompiler.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
